--- a/ladyluck/css/style.css
+++ b/ladyluck/css/style.css
@@ -1,42 +1,50 @@
 @supports (-webkit-touch-callout: none) {
-  #drink-menu .section-title {
-  	background: #444 url(../img/drinks_banner1.JPG) center center no-repeat;
-    background-size: cover;
-  }
-  #location .section-title {
-  	background: #444 url(../img/skyline5.jpg) center center no-repeat;
-  	background-size: cover;
-  }
-  #gallery .section-title {
-	background: #444 url(../img/gallery_banner.JPG) center center no-repeat;
-	background-size: cover;
-  }
+	#drink-menu .section-title {
+		background: #444 url(../img/drinks_banner1.JPG) center center no-repeat;
+		background-size: cover;
+	}
+
+	#location .section-title {
+		background: #444 url(../img/skyline5.jpg) center center no-repeat;
+		background-size: cover;
+	}
+
+	#gallery .section-title {
+		background: #444 url(../img/gallery_banner.JPG) center center no-repeat;
+		background-size: cover;
+	}
 }
+
 @supports not (-webkit-touch-callout: none) {
-  #drink-menu .section-title {
-  	background: #444 url(../img/drinks_banner1.JPG) center center no-repeat fixed;
-    background-size: cover;
-  }
-  #location .section-title {
-  	background: #444 url(../img/skyline5.jpg) center center no-repeat fixed;
-  	background-size: cover;
-  }
-  #gallery .section-title {
-	background: #444 url(../img/gallery_banner.JPG) center center no-repeat fixed;
-	margin-bottom: 50px;
-	background-size: cover;
-  }
+	#drink-menu .section-title {
+		background: #444 url(../img/drinks_banner1.JPG) center center no-repeat fixed;
+		background-size: cover;
+	}
+
+	#location .section-title {
+		background: #444 url(../img/skyline5.jpg) center center no-repeat fixed;
+		background-size: cover;
+	}
+
+	#gallery .section-title {
+		background: #444 url(../img/gallery_banner.JPG) center center no-repeat fixed;
+		margin-bottom: 50px;
+		background-size: cover;
+	}
 }
-body, html {
+
+body,
+html {
 	font-family: 'Raleway', sans-serif;
 	text-rendering: optimizeLegibility !important;
 	-webkit-font-smoothing: antialiased !important;
-	color: #777;
+	color: #444;
 	font-weight: 300;
 	width: 100% !important;
 	height: 100% !important;
 	background-color: #f2e6d9;
 }
+
 h2 {
 	margin: 0 0 20px 0;
 	font-weight: 500;
@@ -44,39 +52,50 @@ h2 {
 	color: #333;
 	text-transform: uppercase;
 }
+
 h3 {
 	font-size: 22px;
 	font-weight: 500;
 	color: #333;
 }
+
 h4 {
 	font-size: 24px;
 	text-transform: uppercase;
 	font-weight: 400;
 	color: #333;
 }
+
 h5 {
 	text-transform: uppercase;
 	font-weight: 700;
 	line-height: 20px;
 }
+
 p {
 	font-size: 16px;
 }
+
 p.intro {
 	margin: 12px 0 0;
 	line-height: 24px;
 }
+
 a {
 	color: #d23c3e;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
 	text-decoration: none;
 	color: #222;
 }
-ul, ol {
+
+ul,
+ol {
 	list-style: none;
 }
+
 .clearfix:after {
 	visibility: hidden;
 	display: block;
@@ -85,20 +104,26 @@ ul, ol {
 	clear: both;
 	height: 0;
 }
+
 .clearfix {
 	display: inline-block;
 }
+
 * html .clearfix {
 	height: 1%;
 }
+
 .clearfix {
 	display: block;
 }
-ul, ol {
+
+ul,
+ol {
 	padding: 0;
 	webkit-padding: 0;
 	moz-padding: 0;
 }
+
 hr {
 	height: 2px;
 	width: 70px;
@@ -109,25 +134,37 @@ hr {
 	margin-bottom: 40px;
 	border: 0;
 }
-.btn:active, .btn.active {
+
+.btn:active,
+.btn.active {
 	background-image: none;
 	outline: 0;
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
-a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
+
+a:focus,
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus {
 	outline: none;
 	outline-offset: none;
 }
+
 /* Navigation */
 #menu {
 	padding: 20px;
 	transition: all 0.8s;
 }
+
 #menu.navbar-default {
 	background-color: rgba(248, 248, 248, 0);
 	border-color: rgba(231, 231, 231, 0);
 }
+
 #menu a.navbar-brand {
 	font-family: 'Dancing Script', cursive;
 	font-size: 36px;
@@ -135,7 +172,8 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	font-weight: 700;
 	letter-spacing: 1px;
 }
-#menu.navbar-default .navbar-nav > li > a {
+
+#menu.navbar-default .navbar-nav>li>a {
 	text-transform: uppercase;
 	color: #ddd;
 	font-weight: 500;
@@ -145,48 +183,63 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	letter-spacing: 0.5px;
 	margin: 10px 15px 0 15px;
 }
-#menu.navbar-default .navbar-nav > li > a:hover {
+
+#menu.navbar-default .navbar-nav>li>a:hover {
 	color: #d23c3e;
 }
+
 .on {
 	background-color: #262626 !important;
 	padding: 0 !important;
 	padding: 10px 0 !important;
 }
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
 	color: #d23c3e !important;
 	background-color: transparent;
 }
+
 .navbar-toggle {
 	border-radius: 0;
 }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
 	background-color: #d23c3e;
 	border-color: #d23c3e;
 }
+
 .navbar-default .navbar-toggle:hover>.icon-bar {
 	background-color: #FFF;
 }
+
 .section-title {
 	margin-bottom: 70px;
 }
+
 .section-title .overlay {
 	padding: 80px 0;
 	background: rgba(0, 0, 0, 0.5);
 }
+
 .section-title p {
 	font-size: 32px;
-	color: rgba(255,255,255,0.8);
+	color: rgba(255, 255, 255, 0.8);
 }
+
 .section-title h2 {
 	font-size: 370%;
 	-webkit-text-stroke: 1px black;
 }
+
 .section-title hr {
 	margin: 0 auto;
 	margin-bottom: 40px;
 	width: 25%;
 }
+
 .btn-custom {
 	text-transform: uppercase;
 	color: #fff;
@@ -201,10 +254,16 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	margin-top: 20px;
 	transition: all 0.5s;
 }
-.btn-custom:hover, .btn-custom:focus, .btn-custom.focus, .btn-custom:active, .btn-custom.active {
+
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom.focus,
+.btn-custom:active,
+.btn-custom.active {
 	color: #fff;
 	background-color: #628d0f;
 }
+
 /* Header Section */
 .intro {
 	display: table;
@@ -217,9 +276,11 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	background-size: cover;
 	-o-background-size: cover;
 }
+
 .intro .overlay {
-	background: rgba(0,0,0,0.4);
+	background: rgba(0, 0, 0, 0.4);
 }
+
 .intro h1 {
 	font-family: 'Dancing Script';
 	color: #fff;
@@ -228,10 +289,12 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	margin-top: 0;
 	margin-bottom: 10px;
 }
+
 .intro span {
 	color: #a7c44c;
 	font-weight: 600;
 }
+
 .intro p {
 	color: #fff;
 	font-size: 32px;
@@ -239,25 +302,31 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
 	margin-top: 10px;
 	margin-bottom: 40px;
 }
+
 header .intro-text {
 	padding-top: 250px;
 	padding-bottom: 200px;
 	text-align: center;
 }
+
 /* Location Section */
 #location {
 	padding: 0;
 }
+
 #location h3 {
 	font-size: 20px;
 }
+
 #location .about-text {
 	margin-left: 10px;
 }
+
 #location .about-img {
 	display: inline-block;
 	position: relative;
 }
+
 #location .about-img:before {
 	display: block;
 	content: '';
@@ -268,27 +337,34 @@ header .intro-text {
 	left: 8px;
 	border: 1px solid rgba(255, 255, 255, 0.5);
 }
+
 #location p {
 	line-height: 24px;
 	margin: 15px 0 30px;
 }
+
 #location .section-title h2 {
 	color: #fff;
 }
+
 /* About Section */
 #about {
 	padding: 120px 0;
 }
+
 #about h3 {
 	font-size: 20px;
 }
+
 #about .about-text {
 	margin-left: 10px;
 }
+
 #about .about-img {
 	display: inline-block;
 	position: relative;
 }
+
 #about .about-img:before {
 	display: block;
 	content: '';
@@ -299,34 +375,43 @@ header .intro-text {
 	left: 8px;
 	border: 1px solid rgba(255, 255, 255, 0.5);
 }
+
 #about p {
 	line-height: 24px;
 	margin: 15px 0 30px;
 }
+
 /* drink menu Section */
 #drink-menu {
 	padding: 0 0 60px 0;
 }
+
 #drink-menu .section-title .overlay {
 	background: rgba(0, 0, 0, 0.65);
 }
+
 #drink-menu .section-title h2 {
 	color: #fff;
 }
+
 #drink-menu img {
 	width: 300px;
 	box-shadow: 15px 0 #a7c44c;
 }
+
 #drink-menu h3 {
 	padding: 10px 0;
 	text-transform: uppercase;
 }
+
 #drink-menu .menu-section hr {
 	margin: 0 auto;
 }
+
 #drink-menu .menu-section {
 	margin: 0 20px 80px;
 }
+
 #drink-menu .menu-section-title {
 	font-size: 26px;
 	display: block;
@@ -335,45 +420,55 @@ header .intro-text {
 	margin: 20px 0;
 	text-align: center;
 }
+
 #drink-menu .menu-item {
 	margin: 35px 0;
 	font-size: 18px;
 }
+
 #drink-menu .menu-item-name {
 	font-weight: 600;
 	font-size: 17px;
 	color: #555;
 	border-bottom: 2px dotted rgb(213, 213, 213);
 }
+
 #drink-menu .menu-item-description {
 	font-style: italic;
 	font-size: 15px;
 }
+
 #drink-menu .menu-item-price {
 	float: right;
 	font-weight: 600;
 	color: #555;
 	margin-top: -26px;
 }
+
 /* Gallery Section */
 #gallery {
 	padding: 0 0 120px 0;
 }
+
 #gallery .section-title h2 {
 	color: #fff;
 }
+
 .categories {
 	padding-bottom: 30px;
 	text-align: center;
 }
+
 ul.cat li {
 	display: inline-block;
 }
+
 ol.type li {
 	display: inline-block;
 	margin: 0 10px;
 	padding: 20px 0;
 }
+
 ol.type li a {
 	color: #999;
 	font-weight: 500;
@@ -385,31 +480,39 @@ ol.type li a {
 	text-transform: uppercase;
 	letter-spacing: 0.5px;
 }
+
 ol.type li a.active {
 	color: #fff;
 	background-color: #d23c3e;
 }
+
 ol.type li a:hover {
 	color: #fff;
 	background-color: #d23c3e;
 }
+
 .isotope-item {
 	z-index: 2
 }
+
 .isotope-hidden.isotope-item {
 	z-index: 1
 }
-.isotope, .isotope .isotope-item {
+
+.isotope,
+.isotope .isotope-item {
 	/* change duration value to whatever you like */
 	-webkit-transition-duration: 0.8s;
 	-moz-transition-duration: 0.8s;
 	transition-duration: 0.8s;
 }
+
 .isotope-item {
 	margin-right: -1px;
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
+
 .isotope {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -417,6 +520,7 @@ ol.type li a:hover {
 	-moz-transition-property: height, width;
 	transition-property: height, width;
 }
+
 .isotope .isotope-item {
 	-webkit-backface-visibility: hidden;
 	backface-visibility: hidden;
@@ -424,13 +528,16 @@ ol.type li a:hover {
 	-moz-transition-property: -moz-transform, opacity;
 	transition-property: transform, opacity;
 }
+
 .portfolio-item {
 	margin: 15px 0;
 }
+
 .portfolio-item .hover-bg {
 	overflow: hidden;
 	position: relative;
 }
+
 .portfolio-item .hover-bg:before {
 	display: block;
 	content: '';
@@ -441,6 +548,7 @@ ol.type li a:hover {
 	left: 6px;
 	border: 1px solid rgba(255, 255, 255, 0.6);
 }
+
 .hover-bg .hover-text {
 	position: absolute;
 	text-align: center;
@@ -453,6 +561,7 @@ ol.type li a:hover {
 	opacity: 0;
 	transition: all 0.5s;
 }
+
 .hover-bg .hover-text>h4 {
 	opacity: 0;
 	color: #fff;
@@ -463,15 +572,18 @@ ol.type li a:hover {
 	letter-spacing: 0.5px;
 	font-weight: 500;
 }
+
 .hover-bg:hover .hover-text>h4 {
 	opacity: 1;
 	-webkit-backface-visibility: hidden;
 	-webkit-transform: translateY(0);
 	transform: translateY(0);
 }
+
 .hover-bg:hover .hover-text {
 	opacity: 1;
 }
+
 /* Old Location Section */
 /*#location {
 	margin-top: 2500px;
@@ -526,58 +638,74 @@ ol.type li a:hover {
 	padding: 90px 0;
 	color: #fff;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d23c3e+50,779936+100 */
-	background: rgb(142,182,64); /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(142,182,64,1) 50%, rgba(119,153,54,1) 100%); /* FF3.6-15 */
-	background: -webkit-linear-gradient(top, rgba(142,182,64,1) 50%, rgba(119,153,54,1) 100%); /* Chrome10-25,Safari5.1-6 */
-	background: linear-gradient(to bottom, rgba(142,182,64,1) 50%, rgba(119,153,54,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d23c3e', endColorstr='#779936', GradientType=0 ); /* IE6-9 */
+	background: rgb(142, 182, 64);
+	/* Old browsers */
+	background: -moz-linear-gradient(top, rgba(142, 182, 64, 1) 50%, rgba(119, 153, 54, 1) 100%);
+	/* FF3.6-15 */
+	background: -webkit-linear-gradient(top, rgba(142, 182, 64, 1) 50%, rgba(119, 153, 54, 1) 100%);
+	/* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, rgba(142, 182, 64, 1) 50%, rgba(119, 153, 54, 1) 100%);
+	/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d23c3e', endColorstr='#779936', GradientType=0);
+	/* IE6-9 */
 }
+
 #contact .overlay {
 	padding: 80px 0;
 	background: #d23c3e;
 }
+
 #contact h2 {
 	font-family: 'Open Sans', sans-serif;
 	color: #fff;
 	font-weight: 400;
 	margin: 0;
 }
+
 #contact hr {
 	background: #fff;
 }
+
 #contact h3 {
 	color: #fff;
 	font-weight: 500;
 	font-size: 20px;
 	margin: 5px 0;
 }
+
 /* Contact Section */
 #contact {
 	padding: 100px 0 60px 0;
 	background: #F6F6F6;
 }
+
 #contact .section-title p {
 	color: #777;
 }
+
 #contact form {
 	padding: 0;
 }
+
 #contact h3 {
 	text-transform: uppercase;
 	font-size: 20px;
 	font-weight: 400;
 	color: #555;
 }
+
 #contact .text-danger {
 	color: #cc0033;
 	text-align: left;
 }
+
 label {
 	font-size: 12px;
 	font-weight: 400;
 	font-family: 'Open Sans', sans-serif;
 	float: left;
 }
+
 #contact .form-control {
 	display: block;
 	width: 100%;
@@ -595,27 +723,34 @@ label {
 	-o-transition: none;
 	transition: none;
 }
+
 #contact .form-control:focus {
 	border-color: #999;
 	outline: 0;
 	-webkit-box-shadow: transparent;
 	box-shadow: transparent;
 }
+
 .form-control::-webkit-input-placeholder {
-color: #777;
+	color: #777;
 }
+
 .form-control:-moz-placeholder {
-color: #777;
+	color: #777;
 }
+
 .form-control::-moz-placeholder {
-color: #777;
+	color: #777;
 }
+
 .form-control:-ms-input-placeholder {
-color: #777;
+	color: #777;
 }
+
 #contact .contact-item {
 	margin: 20px 0 40px 0;
 }
+
 #contact .contact-item span {
 	font-weight: 400;
 	color: #aaa;
@@ -623,15 +758,18 @@ color: #777;
 	margin-bottom: 6px;
 	display: inline-block;
 }
+
 #contact .contact-item p {
 	font-size: 16px;
 }
+
 /* Footer Section*/
 #footer {
 	background: #262626;
 	padding: 50px 0 0 0;
 	margin-top: 50px;
 }
+
 #footer h3 {
 	color: #d23c3e;
 	font-weight: 400;
@@ -639,34 +777,42 @@ color: #777;
 	text-transform: uppercase;
 	margin-bottom: 20px;
 }
+
 #footer .copyrights {
 	padding: 20px 0;
 	margin-top: 50px;
 	background-color: #d23c3e;
 }
+
 #footer .social {
 	margin: 20px 0 30px 0;
 }
+
 #footer .social ul li {
 	display: inline-block;
 	margin: 0 20px;
 }
+
 #footer .social i.fa {
 	font-size: 26px;
 	padding: 4px;
 	color: #fff;
 	transition: all 0.3s;
 }
+
 .social i.fa:hover {
 	color: #eee;
 }
+
 #footer p {
 	font-size: 15px;
-	color: rgba(255,255,255,0.8)
+	color: rgba(255, 255, 255, 0.8)
 }
+
 #footer a {
 	color: #f6f6f6;
 }
+
 #footer a:hover {
 	color: #333;
 }
