--- a/beatpad/styles.css
+++ b/beatpad/styles.css
@@ -1,6 +1,12 @@
 html,
 body {
     touch-action: manipulation;
+    overflow: hidden;
+    /* Disable scrolling */
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -46,6 +52,7 @@ body {
     /* Smooth transition for shrinking effect */
     text-align: center;
     user-select: none;
+    touch-action: manipulation;
 }
 
 .btn:active {
